--- a/target_pose_creator/config/camera.yaml
+++ b/target_pose_creator/config/camera.yaml
@@ -1,20 +1,26 @@
-image_width: 640
-image_height: 480
-camera_name: camera
+image_width: 1920
+image_height: 1080
+camera_name: narrow_stereo
 camera_matrix:
   rows: 3
   cols: 3
-  data: [4827.94, 0, 1223.5, 0, 4835.62, 1024.5, 0, 0, 1]
-distortion_model: plumb_bob
+  data: [ 2570.36013,     0.     ,   909.89676,
+             0.     ,  2570.22187,   586.80859,
+             0.     ,     0.     ,     1.     ]
+camera_model: plumb_bob
 distortion_coefficients:
   rows: 1
   cols: 5
-  data: [-0.41527, 0.31874, -0.00197, 0.00071, 0]
+  data: [0.138183, 0.637974, 0.010038, -0.006956, 0.000000]
 rectification_matrix:
   rows: 3
   cols: 3
-  data: [1, 0, 0, 0, 1, 0, 0, 0, 1]
+  data: [ 1.,  0.,  0.,
+          0.,  1.,  0.,
+          0.,  0.,  1.]
 projection_matrix:
   rows: 3
   cols: 4
-  data: [4827.94, 0, 1223.5, 0, 0, 4835.62, 1024.5, 0, 0, 0, 1, 0]
+  data: [ 2679.31421,     0.     ,   906.91782,     0.     ,
+             0.     ,  2676.92627,   591.84726,     0.     ,
+             0.     ,     0.     ,     1.     ,     0.     ]
