--- a/target_pose_creator/package.xml
+++ b/target_pose_creator/package.xml
@@ -8,10 +8,9 @@
 
   <license>TODO</license>
 
-  <depend>roscpp</depend>
-  <depend>apriltag_ros</depend>
-  <depend>cv_camera</depend>
-  <depend>tf</depend>
-  <depend>image_proc</depend>
-  <buildtool_depend>catkin</buildtool_depend> 
+  <depend>rclcpp</depend>
+  <depend>apriltag_ros</depend> 
+  <depend>tf2</depend>
+  <depend>image_proc</depend> 
+  
 </package>
